# Human_Detector

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Doxygen  LICENSE.txt  README.md
Debug/: makefile  objects.mk  sources.mk
Debug/app/: subdir.mk
Debug/test/: subdir.mk
Release/: makefile
Release/app/: subdir.mk
Release/test/: subdir.mk
app/: CMakeLists.txt  Data.cpp  Detect.cpp  Train.cpp  detect.cpp  main.cpp
data/: svmclassifier
data/classifier/: README.md
data/test/annotations/: crop001006.txt
docs/html/: annotated.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  md_README.html  pages.html
docs/html/d0/d2f/: classTrain-members.html
docs/html/d0/d4e/: app_2CMakeLists_8txt.html
docs/html/d0/df3/: classData.html
docs/html/d2/d4b/: Data_8hpp.html  Data_8hpp_source.html
docs/html/d2/de3/: test_2CMakeLists_8txt.html
docs/html/d4/d15/: test_2main_8cpp.html
docs/html/d4/df4/: Detect_8cpp.html
docs/html/d5/d9c/: app_2main_8cpp.html
docs/html/d6/d3e/: classTrain.html
docs/html/d6/d60/: Detect_8hpp.html  Detect_8hpp_source.html
docs/html/d6/db5/: classData-members.html
docs/html/d8/d8c/: classDetect.html
docs/html/d8/db3/: Data_8cpp.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_5.js
docs/latex/: annotated.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_d422163b96683743ed3963d4aac17747.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  md_README.tex  refman.tex
include/: Data.hpp  Detect.hpp  Train.hpp  lib.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  main.cpp  test.cpp  testData.cpp  testDetect.cpp  testTrain.cpp
(+23 files in other folders)
